# FBX_Tool

./: .gitattributes  .gitignore  .pre-commit-config.yaml  =  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  GIT_DEPLOYMENT_GUIDE.txt  IMPROVEMENT_RECOMMENDATIONS.md  LICENSE  MANIFEST.in  PROJECT_SETUP_SUMMARY.txt  README.md  fix_viz_imports.py  gitignore  launch.bat  main.py  main_gui.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements-visualization.txt  requirements.txt  setup-environment.ps1  setup.bat  setup.py  test_pipeline.py  visualization_example.py
.claude/: settings.local.json
.claude/agents/: algorithm-architect.md  code-auditor.md  data-quality-specialist.md  debug-resolver.md  doc-curator.md  fbx-project-guide.md  integration-engineer.md  performance-optimizer.md  test-architect.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
analysis_modules/: __init__.py  chain_analysis.py  dopesheet_export.py  gait_summary.py  skeleton_visualizer.py  utils.py
docs/: 3D_VIEWER_GUIDE.md  CHANGELOG.md  INSTALL.md  README.md  RELEASE_TEMPLATE.md
docs/agentic/: BASELINE.md  HANDOFF_TEMPLATE.md  RELEASE_CHECKLIST.md  ROLE_ROUTING.md  TASK_TEMPLATE.md  WORKFLOW.md
docs/architecture/: DATA_QUALITY_FRAMEWORK.md  PROCEDURAL_DESIGN_PHILOSOPHY.md  SCENE_MANAGEMENT.md
docs/audits/: MODULE_ERROR_LOGIC_AUDIT.md
docs/changelog/: SESSION_HISTORY.md
docs/development/: FBX_SDK_FIXES.md  HARDCODED_CONSTANTS_AUDIT.md  INCOMPLETE_MODULES.md  NEXT_SESSION_TODO.md
docs/onboarding/: CLAUDE_START_HERE.md  README.md
docs/quick-reference/: COMMANDS.md  TDD_EXAMPLES.md
docs/testing/: MOCK_SETUP_PATTERNS.md
examples/: run_analysis.py  visualize.py
fbx_tool/: __init__.py  __main__.py
fbx_tool/analysis/: chain_analysis.py  constraint_violation_detection.py  directional_change_detection.py  dopesheet_export.py  fbx_loader.py  foot_contact_analysis.py  gait_analysis.py  gait_summary.py  joint_analysis.py  motion_classification.py  motion_transition_detection.py  pose_validity_analysis.py  root_motion_analysis.py  scene_manager.py  temporal_segmentation.py  utils.py  velocity_analysis.py  velocity_analysis.py.backup
fbx_tool/gui/: __init__.py  main_window.py
fbx_tool/visualization/: __init__.py  matplotlib_viewer.py  opengl_viewer.py
scripts/: bootstrap.ps1  fix_all_imports.py  fix_camera.py  fix_coordinates.py  fix_imports.py  fix_viz_imports.py  verify-fast.ps1  verify-full.ps1
tests/: README.md  __init__.py  conftest.py  inspect_animation_layers.py
tests/debug/: README.md  inspect_animation_layers.py  inspect_bones.py  test_motion_states.py
tests/exploratory/: README.md  test_animation_extraction.py  test_animation_variance.py  test_chain_detection.py  test_fbx_coordinate_system.py  test_stack_1.py
tests/integration/: test_analysis_pipeline.py  test_coordinate_system_integration.py  test_foot_contact_velocity_bug.py  test_foot_contact_visualization_integration.py  test_full_analysis_pipeline.py  test_packaging.py
tests/scripts/: debug_constraint_chains.py  test_discontinuity_sensitivity.py
tests/unit/: test_chain_analysis.py  test_constraint_violation_detection.py  test_coordinate_system_detection.py  test_directional_change_detection.py  test_fbx_memory_management.py  test_foot_contact_analysis.py  test_foot_contact_coordinate_system.py  test_gait_analysis.py  test_gait_summary.py  test_gui_analysis_worker.py  test_joint_analysis.py  test_motion_classification.py  test_motion_transition_detection.py  test_pose_validity_analysis.py  test_root_motion_analysis.py  test_scene_manager.py  test_temporal_segmentation.py  test_utils.py  test_utils_trajectory.py  test_velocity_analysis.py
tests/unit/gui/: __init__.py  test_foot_contact_visualization.py
